2004-03-22	blytlerchan
	* preprocl.l: define def_state2
	use def_state2 for macro definition contents
	return T_DEFINED token for macro definition contents
	* preprocp.y [T_DEFINED]: new terminal
	[macro_def]: expect T_DEFINED in stead of T_TOKEN

2004-03-19	blytkerchan
	* preprocl.l: new file
	* preprocp.y: ditto
	* configure.ac: ditto
	* Makefile.am: ditto
	* bootstrap: ditto
	* NEWS: ditto
	* README: ditto

2003-09-10	blytkerchan
	* AUTHORS: new file
	* TODO: ditto
	