@@ -1,3 +1,6 @@
+2004-03-23	blytkerchan
+	* preprocp.y: solve the conditional block problem
+
 2004-03-22	blytlerchan
 	* preprocl.l: define def_state2
 	use def_state2 for macro definition contents
